--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.application.name=nexus-gaming-api
 # Never hard code your credentials into the program because once it's put onto Github it will be stolen
 twitch.client.id=${TWITCH_CLIENT_ID}
 twitch.client.secret=${TWITCH_CLIENT_SECRET}
+twitch.url=${TWITCH_URL}
 # These tell spring boot to look for the values in computers settings
